--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO = 'mongodb+srv://admin:admin@booking-app.ghewqle.mongodb.net/?retryWrites=true&w=majority'
+JWT = '53dR1xbArMHTl6wVCLNbsSvHXrX+ne53gVcYBULdMwk='
