--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO = 'mongodb+srv://admin:admin@booking-app.ghewqle.mongodb.net/?retryWrites=true&w=majority'
 JWT = '53dR1xbArMHTl6wVCLNbsSvHXrX+ne53gVcYBULdMwk='
+PORT = 8800
